Fixed issues with the header overlapping with labels

--- a/css/style.css
+++ b/css/style.css
@@ -321,20 +321,22 @@ h4,
 
 .header-image {
 	margin: auto;
-	top: 0;
-	position: fixed;
-	z-index: -1000;
-	/*padding: 0;*/
 	width: 100%;
 	position: relative;
+	min-height: 600px;
 }
 .header-image img {
 	width: 100%;
+	position: fixed;
+	top: 0;
+	z-index: -10;
 }
 .header-labels {
 	position: absolute;
-	bottom: 12%;
+	top: 0;
+	bottom: 0;
 	left: 10px;
+	z-index: 50;
 }
 .header-labels .glyphicon {
 	font-size: 0.75em;
@@ -344,7 +346,7 @@ h4,
 	color: #fff;
 }
 .intro-block {
-	margin-top: 52%;
+	position: relative;
 	padding-bottom: 80px;
 	background: #27302E;
 	background-color: #27302E;
@@ -358,8 +360,9 @@ h4,
 	height: 300px;
 	margin-left: 5%;
 	position: absolute;
-	bottom: 5%;
-	z-index: 3000;
+	top: 0;
+	margin-top: -400px;
+	z-index: 30;
 }
 .fade {
 	opacity: 1;
@@ -697,9 +700,15 @@ a.contact-email {
 	.navbar-brand {
 		padding: 0;
 	}
+	.header-image {
+		min-height: 400px;
+	}
 }
 @media (max-width: 556px) { 
 
+	.header-image {
+		min-height: 300px;
+	}
 	.navbar-brand h1 {
 		font-size: 1.5em;
 	}
@@ -726,6 +735,9 @@ a.contact-email {
 	}
 }
 @media (max-width: 400px) {
+	.header-image {
+		min-height: 200px;
+	}
 	.project-title {
 		font-size: 0.45em;
 	}
